--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "sass-loader": "^6.0.3",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3"
   },
