--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.2",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "pf-boggle": "^1.1.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
