--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
     "express": "^4.15.2",
+    "human-readable-ids": "^1.0.1",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "pf-boggle": "^1.1.0",
