--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expect": "^1.20.2",
     "express": "^4.15.2",
     "human-readable-ids": "^1.0.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "pf-boggle": "^1.1.0",
