--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "pf-boggle": "^1.1.0",
+    "phaser": "^2.6.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
