--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
+    "expose-loader": "^0.7.3",
     "express": "^4.15.2",
     "human-readable-ids": "^1.0.1",
     "jquery": "^3.2.1",
