--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "moniker": "^0.1.2",
     "pf-boggle": "^1.1.0",
     "phaser": "^2.6.2",
     "prop-types": "^15.5.8",
